bin_PROGRAMS = euler \
							 simple \
							 words \
							 words14

euler_SOURCES = euler.cc
euler_CXXFLAGS = -I../include

simple_SOURCES = simple.cc
simple_CXXFLAGS = -I../include

words_SOURCES = words.cc
words_CXXFLAGS = -I../include

words14_SOURCES = words14.cc
words14_CXXFLAGS = -std=c++1y -I../include

