bin_PROGRAMS = euler \
							 simple \
							 words \
							 words14

euler_SOURCES = euler.cc
euler_CXXFLAGS = -std=c++11 -I../include

simple_SOURCES = simple.cc
simple_CXXFLAGS = -std=c++11 -I../include

words_SOURCES = words.cc
words_CXXFLAGS = -std=c++11 -I../include

words14_SOURCES = words14.cc
words14_CXXFLAGS = -std=c++1y -I../include

